--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,13 +10,13 @@ commands:
   reroll:
     description: Vote to reroll the map before the game starts. It must be enabled by the operator.
     permission: lavarising.reroll
-  state:
-    description: check game state
-    permission: lavarising.state
+  ## state:
+    ## description: DEBUG! Shows the current state of the game
+    ## permission: lavarising.state
 permissions:
   lavarising.start:
     default: op
   lavarising.reroll:
     default: true
-  lavarising.state:
-    default: op
+  ## lavarising.state:
+    ## default: op
