--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>yjservers.tk</groupId>
     <artifactId>LavaRising</artifactId>
-    <version>2.0.0 BETA</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
 
     <name>LavaRising</name>
