--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>yjservers.tk</groupId>
+    <groupId>diffusehyperion.tk</groupId>
     <artifactId>LavaRising</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0-1.19</version>
     <packaging>jar</packaging>
 
     <name>LavaRising</name>
@@ -62,19 +62,32 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>diffusehyperion-github-repo</id>
+            <url>https://raw.githubusercontent.com/DiffuseHyperion/maven-repository/master/</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.18-R0.1-SNAPSHOT</version>
+            <version>1.19.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.6</version>
+            <groupId>tk.diffusehyperion</groupId>
+            <artifactId>GameMaster</artifactId>
+            <version>1.0.0-1.19</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
