reorganized classes add gamemaster as dependency in plugin.yml replace a bit more methods with gamemaster methods

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,10 @@
 name: LavaRising
 version: '${project.version}'
-main: yjservers.tk.lavarising.LavaRising
+main: tk.diffusehyperion.lavarising.LavaRising
 api-version: 1.19
 description: i lost my previous plugin files lmfao
+depend:
+  - GameMaster
 commands:
   start:
     description: Starts the game.
