--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -20,7 +20,7 @@ pregame:
     enabled: true
     # Allow rerolling of the map by a command.
     percentagetopass: 80
-    # How much players need to agree on a reroll to reroll the map.
+    # How many players need to agree on a reroll to reroll the map.
     beforemessage: Rerolling of the map will be enabled in %time_left% seconds.
     # Rerolling is disabled when the server starts. When someone joins the server, rerolling is enabled after 15 seconds. This is to allow the world to load first, and to not cause any weird world gen bugs.
     # Before the 15 seconds is up, there will be a timer showing the countdown. The title of the cooldown will be the above message.
@@ -125,4 +125,8 @@ debug:
   # Attempt to automatically setup server restarting.
     enabled: false
     os: Unix
+    # What operating system the server is running on. Leave blank to let the plugin detect automatically.
+    # Accepted values: Windows, Mac, Unix, Solaris
     jar: spigot-1.17.1.jar
+    # The name of the server jar. Leave blank to let the plugin detect automatically, although this is prone to fail.
+    # Include .jar at the end!
