--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <name>LavaRising</name>
 
-    <description>i lost my previous plugin files lmfao</description>
+    <description>average lava rising plugin</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
