--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ api-version: 1.13
 description: average lava rising plugin
 depend:
   - GameMaster
+  - BossbarLib
 commands:
   start:
     description: Starts the game.
