--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -66,7 +66,7 @@ main:
   # How fast the lava rises when the lava level is below sea level. Unit is seconds.
   deathmessage: "%original% and is eliminated! %left% players remaining."
   # What the death message should be.
-  # Replace the original death message with %replace%.
+  # Replace the original death message with %original%.
   # Replace the player who died with %player%.
   # Replace the amount of players left with %left%.
 
