change package name

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,10 @@
 
     <repositories>
         <repository>
+            <id>BossbarLib-repo</id>
+            <url>https://github.com/DiffuseHyperion/BossbarLib/raw/repository</url>
+        </repository>
+        <repository>
             <id>GameMaster-repo</id>
             <url>https://github.com/DiffuseHyperion/GameMaster/raw/repository</url>
         </repository>
@@ -65,10 +69,6 @@
         <repository>
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
-        </repository>
-        <repository>
-            <id>BossbarLib-repo</id>
-            <url>https://raw.githubusercontent.com/DiffuseHyperion/BossbarLib/repository</url>
         </repository>
     </repositories>
 
@@ -82,13 +82,13 @@
         <dependency>
             <groupId>tk.diffusehyperion</groupId>
             <artifactId>GameMaster</artifactId>
-            <version>1.0.0-1.8</version>
+            <version>1.0.1-1.8</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>me.tigerhix.lib</groupId>
             <artifactId>BossbarLib</artifactId>
-            <version>diffuse-2.0.5</version>
+            <version>diffuse-2.0.6</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
