--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
         <dependency>
             <groupId>tk.diffusehyperion</groupId>
             <artifactId>GameMaster</artifactId>
-            <version>1.1.0-1.8-SNAPSHOT</version>
+            <version>1.1.1-1.8</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
