--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,124 +5,155 @@
 #         Pre-Game > Grace > Main > Post           #
 #   Overtime (might be skipped)  ^                 #
 ####################################################
+
+game:
+  # Config about general game settings.
+  pregame:
+    worldName: world
+    # The name for the world being generated. This should be the same as level-name in your server.properties file.
+    seed:
+    # The seed for the world being generated. Leave blank to randomly generate a seed. This should only contain numbers.
+    borderSize: 10
+    # The size for the border at the start. Unit is the number of blocks for the border diameter.
+    rerolling:
+      # Rerolling is a feature that allows players to vote on "rerolling" a map, restarting the server so that a new world is generated.
+      # Rerolling is disabled when the server starts, and will be enabled after X seconds.
+      # This is to allow the world to load first, and to not cause any weird world gen bugs.
+      enabled: true
+      # Allow rerolling of the map by a command.
+      rerollTimer: 15
+      # How long to wait before rerolling is enabled. Unit is seconds.
+      percentageToPass: 80
+      # How many players need to agree on a reroll to reroll the map.
+      rerollingEnabled: "Rerolling of the world is now enabled! Do /reroll to vote to reroll. %required% players needs to vote to reroll."
+      # Action bar message to show when rerolling is enabled.
+      # Replace %required% with the amount of votes required to reroll the map.
+      kickMessage: "%sender% wants to reroll the map! Map is now being rerolled. Join back soon!"
+      # The plugin kicks everyone when a reroll is decided upon to recreate a world. This will be the kick message.
+      # Replace %sender% with the final person's decision to reroll the map.
+    start:
+      countdown: true
+      # If this is enabled, the plugin will countdown X seconds before starting, or immediately start if this is false.
+      timer: 5
+      # How long to wait if "countdown" is true.
+
+  grace:
+    duration: 60
+    # How long will the grace period last. Unit is seconds.
+    finalBorderSize: 176
+    # How big the border will expand to at the end. Unit is the number of blocks for the border diameter.
+    # Keep in mind the amount of blocks needed to be filled by the plugin! 200 will start lagging the server, but it may not be depending on your hardware.
+    speed: 30
+    # How long should it take for the border to expand to its final size. Unit is seconds.
+
+  main:
+    lavaInterval: 5
+    # How fast the lava rises. Unit is seconds.
+    deathMessage: "%original% and is eliminated! %left% players remaining."
+    # What the death message should be.
+    # Replace the original death message with %original%.
+    # Replace the player who died with %player%.
+    # Replace the amount of players left with %left%.
+    quitMessage: "%original% and is eliminated! %left% players remaining."
+    # What the disconnect message should be.
+    # Replace the original death message with %original%.
+    # Replace the player who died with %player%.
+    # Replace the amount of players left with %left%.
+
+  overtime:
+    # Lava does not rise during overtime. Game ends when there is one person left alive!
+    warning:
+      # Warn the players about overtime? The warning will be shown by a chat message.
+      enabled: true
+      # self-explanatory
+      time: 5
+      # How long to show the warning for.
+    threshold: 240
+    # The level of lava needed for the game to be considered to be in overtime.
+    # Keep in mind that the build limit is 320 on 1.18, and 255 on <1.18!
+    finalBorderSize: 20
+    # How small the border will shrink to. Unit is the number of blocks for the border diameter.
+    speed: 120
+    # How fast the border will shrink.
+    # Make sure the speed is not too fast so that people can see it coming!
+
+  post:
+    duration: 30
+    # How long the server will wait before restarting the server.
+    creativeMode: all
+    # (mostly for fun) Who the game will give creative mode to at the end of the game.
+    # Accepted values: 'none', 'winner', 'all'
+    kickMessage: The game is restarting now. Join back soon!
+    # What should be the kick message when the server is restarting.
+
 # For all configs with the name 'timername', there is multiple variables that you can add. The game will automatically translate these variables.
-# Special variables for specific configs will be specified.
-# Use %time_left% for the amount of seconds left in the timer.
-# Use %time_elapsed% for the amount of seconds elapsed.
-# Use %players_shown# for all players which can see the timer.
-pregame:
-  worldname: world
-  # The name for the world being generated. This should be the same as level-name in your server.properties file.
-  seed:
-  # The seed for the world being generated. Leave blank to randomly generate a seed. This should only contain numbers.
+timers:
+  # The game frequently uses timers to display information to players. You can customize the look of the timers here!
+  # Timers are sent using boss bars.
 
-  rerolling:
-    enabled: true
-    # Allow rerolling of the map by a command.
-    percentagetopass: 80
-    # How many players need to agree on a reroll to reroll the map.
-    beforemessage: Rerolling of the map will be enabled in %time_left% seconds.
-    # Rerolling is disabled when the server starts. When someone joins the server, rerolling is enabled after 15 seconds. This is to allow the world to load first, and to not cause any weird world gen bugs.
-    # Before the 15 seconds is up, there will be a timer showing the countdown. The title of the cooldown will be the above message.
+  # For all configs with "name", they specify the message the timer will show. You can add placeholders to the message.
+  # Special placeholders for specific configs will be shown in the respective config.
+  # Use %time_left% for the amount of seconds left in the timer.
+  # Use %time_elapsed% for the amount of seconds elapsed.
+  # Chat formatting also works, use § for the formatting.
 
-    enabledmessage: "Rerolling of the world is now enabled! Do /reroll to vote to reroll. %required% players needs to vote to reroll."
-    # When the 15 seconds is up, the timer's title will change to the above message.
-    # Replace %required% with the amount of votes required to reroll the map.
+  # For all config with "colour", they specify the colour of the bossbar.
+  # See https://hub.spigotmc.org/javadocs/spigot/org/bukkit/boss/BarColor.html
 
-    kickmessage: "%sender% wants to reroll the map! Map is now being rerolled. Join back soon!"
-    # The plugin kicks everyone when a reroll is decided upon to recreate a world. This will be the kick message.
-    # Replace %sender% with the final person's decision to reroll the map.
-
-  start:
-    countdown: true
-    # When /start is sent, the plugin will count down a time before starting.
-    timername: "Starting in %time_left% seconds!"
-    # What the countdown timer message will be.
-
-  bordersize: 10
-  # The size for the border at the start. Unit is the number of blocks for the border diameter.
-
-grace:
-  duration: 60
-  # How long will the grace period last. Unit is seconds.
-  finalbordersize: 176
-  # How big the border will expand to at the end. Unit is the number of blocks for the border diameter.
-  # Keep in mind the amount of blocks needed to be filled by the plugin! 200 will start lagging the server, but it may not depending on your hardware.
-  speed: 30
-  # How long should it take for the border to expand to its final size. Unit is seconds.
-
-  timername: The game is in the grace period! PVP is off. %time_left% seconds left.
-  # What should the title of the timer be.
-
-main:
-  timername: The game is in the main period! Lava is at %level%, you are %distance% blocks away.
-  # What should the title of the timer be.
-  # Replace %distance% with the distance a player is from the lava y-level.
-  # Replace %level% with the lava y-level.
-  # (Tip: Include %level% if overtime is enabled to warn players of impending overtime.)
-
-  lavainterval: 5
-  # How fast the lava rises when the lava level is below sea level. Unit is seconds.
-  deathmessage: "%original% and is eliminated! %left% players remaining."
-  # What the death message should be.
-  # Replace the original death message with %original%.
-  # Replace the player who died with %player%.
-  # Replace the amount of players left with %left%.
-
-overtime:
-  # Lava does not rise during overtime. Game ends when there is one person left alive!
-  warning:
-    # Warn the players about overtime? The warning will be shown by a bossbar below the main timer.
-    enabled: true
-    # self-explanatory
-    time: 10
-    # How long the meesage will show for. Unit is seconds.
-    message: Overtime triggers at Y %threshold%!
-    # What the message will be.
-    # Replace %threshold% with the threshold to activate overtime. Set below VVV
-  threshold: 305
-  # The level of lava needed for the game to be considered to be in overtime.
-  # Keep in mind that the build limit is 320 on 1.18, and 255 on <1.18!
-
-  finalbordersize: 20
-  # How small the border will shrink to. Unit is the number of blocks for the border diameter.
-  speed: 120
-  # How fast the border will shrink.
-  # Make sure the speed is not too fast so that people can see it coming!
-
-  bartitle: OVERTIME! Lava is paused. Border will shrink slowly to the middle. Last one alive wins!
-  # What the overtime bar name should be.
-
-post:
-  duration: 30
-  # How long the server will wait before restarting the server.
-  timername: "%winner% has survived! The server will restart in %time_left% seconds."
-  # What should the title of the timer be.
-  # Replace %winner% with the winner of the game.
-
-  creativemode: all
-  # (mostly for fun) Who the game will give creative mode to at the end of the game.
-  # Accepted values: 'none', 'winner', 'all'
-  kickmessage: The game is restarting now. Join back soon!
-  # What should be the kick message when the server is restarting.
+  # For all config with "style", they specify the style of the bossbar, specifically how much notches / sections the bossbar will have
+  # See https://hub.spigotmc.org/javadocs/spigot/org/bukkit/boss/BarStyle.html
+  pregame:
+    rerolling:
+      name: "Rerolling of the map will be enabled in %time_left% seconds."
+      colour: WHITE
+      style: SEGMENTED_6
+    start:
+      name: "Starting in %time_left% seconds!"
+      colour: GREEN
+      style: SEGMENTED_6
+  grace:
+    name: "The game is in the grace period! PVP is off. %time_left% seconds left."
+    colour: YELLOW
+    style: SEGMENTED_20
+  main:
+    name: "The game is in the main period! Lava is at %level%, you are %distance% blocks away."
+    colour: RED
+    style: SEGMENTED_20
+    # This timer is special - it counts down when the next lava rise will occur, and will keep repeating until either the game goes into overtime or ends.
+    # Replace %distance% with the distance a player is from the lava y-level.
+    # Replace %level% with the lava y-level.
+    # (Tip: Include %level% if overtime is enabled to warn players of impending overtime.)
+  overtime:
+    warning:
+      name: Overtime triggers at Y %threshold%!
+      # Replace %threshold% with the threshold to activate overtime.
+      colour: RED
+      style: SEGMENTED_6
+    name: OVERTIME! Lava is paused. Border will shrink slowly to the middle. Last one alive wins!
+    # No placeholders allowed here.
+    colour: RED
+    style: SOLID
+  post:
+    name: "%winner% has survived! The server will restart in %time_left% seconds."
+    # Replace %winner% with the winner of the game.
+    colour: WHITE
+    style: SEGMENTED_20
 
 debug:
-  warnings: true
-  # The plugin will warn the console when incoming errors are encountered. If you already know about this, you can disable the warnings by setting this to false.
-  ignoreconfig:
+  ignoreConfig:
     # The plugin will automatically edit some values in your files, specifically server.properties and bukkit.yml, to disable spawn protection, nether and end. This is for game balance and performance.
     # However, you can choose to ignore these checks. I would highly recommend leaving it as is, but it's your decision at the end.
-    disablespawnprotection: false
+    disableSpawnProtection: false
     # Spawn protection prevents non-op users from breaking or placing blocks near spawn.
-    disablenether: false
+    disableNether: false
     # Self-explanatory, this is disabled to prevent cheaters from hiding out from the lava in the nether.
-    disableend: false
+    disableEnd: false
     # Self-explanatory, this is disabled to stop unnecessary saving of the end, and by extension speeds up the server restarting.
-    allowflight: false
+    allowFlight: false
     # Minecraft's built-in anticheat usually kicks more innocent players than cheaters, and you cannot rejoin during the main phase. Turning this off usually prevent false-positives from the anti-cheat, and improves player experience.
     # if you really want an anticheat install one from spigot
-  restartsetup:
-  # Attempt to automatically setup server restarting.
+  restartSetup:
+    # Attempt to automatically setup server restarting.
     enabled: false
     os: Unix
     # What operating system the server is running on. Leave blank to let the plugin detect automatically.
@@ -130,3 +161,5 @@ debug:
     jar: spigot-1.17.1.jar
     # The name of the server jar. Leave blank to let the plugin detect automatically, although this is prone to fail.
     # Include .jar at the end!
+  warnings: false
+  # Set this to true to ignore explanations from the plugin about missing files.
