--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>tk.diffusehyperion</groupId>
     <artifactId>LavaRising</artifactId>
-    <version>2.1.0-1.13</version>
+    <version>2.2.0-rc1-1.13</version>
     <packaging>jar</packaging>
 
     <name>LavaRising</name>
