--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>tk.diffusehyperion</groupId>
     <artifactId>LavaRising</artifactId>
-    <version>2.2.1-1.13</version>
+    <version>2.3.0-rc1-1.13</version>
     <packaging>jar</packaging>
 
     <name>LavaRising</name>
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>tk.diffusehyperion</groupId>
             <artifactId>GameMaster</artifactId>
-            <version>1.0.1-1.13</version>
+            <version>1.0.3-1.13</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
