--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>tk.diffusehyperion</groupId>
     <artifactId>LavaRising</artifactId>
-    <version>2.3.0-rc2-1.13</version>
+    <version>2.3.1-rc1-1.13</version>
     <packaging>jar</packaging>
 
     <name>LavaRising</name>
@@ -51,13 +51,6 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
-        <extensions>
-            <extension>
-                <groupId>com.gkatzioura.maven.cloud</groupId>
-                <artifactId>azure-storage-wagon</artifactId>
-                <version>1.8</version>
-            </extension>
-        </extensions>
     </build>
 
     <repositories>
@@ -69,10 +62,6 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
-        <repository>
-            <id>GameMaster-repo</id>
-            <url>https://diffusehyperion.blob.core.windows.net/releases</url>
-        </repository>
     </repositories>
 
     <dependencies>
@@ -83,21 +72,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>tk.diffusehyperion</groupId>
-            <artifactId>GameMaster</artifactId>
-            <version>1.0.3-1.13</version>
+            <groupId>me.diffusehyperion</groupId>
+            <artifactId>gamemaster</artifactId>
+            <version>1.0.3.1-rc1-1.13</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>diffusehyperion-maven-repo</id>
-            <url>bs://diffusehyperion/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>diffusehyperion-maven-repo</id>
-            <url>bs://diffusehyperion/releases</url>
-        </repository>
-    </distributionManagement>
 </project>
